gitops/components/nexus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
  labels:
    app.kubernetes.io/part-of: banking-demo
    app.kubernetes.io/name: nexus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nexus
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: banking-demo
        app.kubernetes.io/name: nexus
    spec:
      serviceAccountName: nexus
      securityContext:
        fsGroup: 200
        runAsUser: 200
        runAsNonRoot: true
      containers:
        - name: nexus
          image: docker.io/sonatype/nexus3:3.75.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 200m
              memory: 2Gi
            limits:
              cpu: "2"
              memory: 4Gi
          readinessProbe:
            httpGet:
              path: /service/rest/v1/status
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /service/rest/v1/status
              port: http
            initialDelaySeconds: 180
            periodSeconds: 30
            failureThreshold: 6
          volumeMounts:
            - name: data
              mountPath: /nexus-data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nexus-data
