gitops/components/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  labels:
    app.kubernetes.io/part-of: banking-demo
    app.kubernetes.io/name: nexus
spec:
  selector:
    app.kubernetes.io/name: nexus
  ports:
    - name: http
      port: 8081
      targetPort: http
