gitops/components/nexus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
  namespace: nexus
  labels:
    app.kubernetes.io/part-of: banking-demo
    app.kubernetes.io/name: nexus
spec:
  host: nexus.apps.cluster-k7kqp.k7kqp.sandbox3321.opentlc.com
  to:
    kind: Service
    name: nexus
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
